# trip_planner

./: .gitignore  AGENTS.md  README.md  debug_orchestrator.py  pyproject.toml  test_trip_llm_only.py
app/: llm.py  main.py  orchestrator.py  schemas.py
app/agents/: destination_scout.py  foundation_agent.py  logistics_planner.py
app/tools/: html_to_text.py  websearch.py
tests/: test_api.py  test_destination_scout.py  test_frontend_backend_integration.py  test_orchestrator_scoring.py  test_trip_request_schema.py  test_websearch.py
trip_planner_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
trip_planner_frontend/src/: App.css  App.jsx  index.css
trip_planner_frontend/src/components/: BookingLinks.css  BookingLinks.jsx  BundleCard.css  BundleCard.jsx  BundlesView.css  BundlesView.jsx  ChatPanel.css  ChatPanel.jsx  PlanForm.css  PlanForm.jsx  PlanSummary.css  PlanSummary.jsx  SourceList.css  SourceList.jsx
trip_planner_frontend/src/lib/: payload.js  sampleData.js
